17_NetworkPolicy_101/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-default-allow
  namespace: network-policy-demo
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
