17_NetworkPolicy_101/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: network-policy-demo
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
